--- a/TB Tekstil/atlas.html
+++ b/TB Tekstil/atlas.html
@@ -15,10 +15,36 @@
     
         <a href="hakkimizda.html">Hakkımızda</a> 
         <a href="kumas.html">Kumaş Türlerimiz</a>
-        <a href="konfeksiyon.html">Konfeksiyon</a>
+        <a href="konfeksiyon.html">Anket</a>
         <a href="ürünlerimiz.html">Ürünlerimiz</a>
         <a href="iletisim.html">İletişim</a>
     </nav>
-    
+    <img src="images/atlas.jfif"
+    width="672" height="400">
+    <img src="images/atlas2.jfif"
+    width="672" height="400">
+    <h1 style="color: red;">Atlas Kumaş Nedir ?</h1>
+    <br />
+    <p style="text-align: left;">Sağlamlığı ve görünüşü ile ön plana çıkan atlas kumaş gören herkesin dikkatini çekme amacıyla tasarlanmıştır. Lüks kumaş sınıfı arasında yer alan bu ürünlerde altın ve gümüş ile işleme yapmak da mümkündür.Atlas kumaşlar iki farklı materyal kullanılarak üretilebildiği için terleme konusunda değişkenlik gösterebilir. Sık dokuma yöntemlerinin kullanıldığı ipek materyal ile hazırlanan atlas kumaşlarda hava geçirgenliği düşük olacağından terleme durumu oluşacaktır. Ancak pamuktan üretilen atlas kumaşlar terleme sorunu oluşturmaz.</p>
+    <br />
+    <h1 style="color: red;"> Atlas Kumaşın Özellikleri Nelerdir ?</h1>
+    <br />
+
+<li style="text-align: left;">Parlak bir yapıya sahiptir.</li>
+<li style="text-align: left;">Ütülemesi oldukça kolaydır.</li>
+<li style="text-align: left;">Oldukça dayanıklıdır.</li>
+<li style="text-align: left;">İnsan vücuduna yapışmaz.</li>
+<li style="text-align: left;">Birçok farklı sektörde kullanılır.</li>
+
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+
 </body>
 </html>
