--- a/TB Tekstil/krep.html
+++ b/TB Tekstil/krep.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Krep Kumaş </title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -15,11 +15,35 @@
     
         <a href="hakkimizda.html">Hakkımızda</a> 
         <a href="kumas.html">Kumaş Türlerimiz</a>
-        <a href="konfeksiyon.html">Konfeksiyon</a>
+        <a href="konfeksiyon.html">Anket</a>
         <a href="ürünlerimiz.html">Ürünlerimiz</a>
         <a href="iletisim.html">İletişim</a>
     </nav>
+    <img src="images/krep.jfif" alt="krep"
+    width="672" height="400">
+    <img src="images/krep2.jfif" alt="krep2"
+    width="672" height="400">
 
-    
+    <h1 style="color: red;">Krep Kumaş Nedir ?</h1>
+    <br />
+    <p style="text-align: left;">Krep kumaş, genellikle yazlık ürünlerde kullanılan bir kumaştır. Hafif ve dökümlü yapısı sebebiyle, yaz aylarını bunaltıcı sıcaklarını bir miktar da olsa hafifletebilmektedir.</p>
+    <br />
+    <p style="text-align: left;">Krep kumaş; ipek, yün ve viskoz kumaşların karışımlarından elde edilen karma bir yapıya sahiptir. Kumaşın içeriğindeki doğal malzeme oranı arttıkça hava geçirgenliği ve yaz aylarında kullanılma şansı da artmaktadır. Krep kumaş kullanılarak; abiye, elbise, pantolon ve ceket tarzında ürünlerin dikilmesi de mümkündür.</p>
+    <br />
+    <h1 style="color: red;">Krep Kumaşın Özellikleri Nelerdir ?</h1>
+    <br >
+    <li style="text-align: left;">Terlemeyi önleyen bir yapısı vardır</li>
+    <li style="text-align: left;">Hafif ve oldukça rahattır.</li>
+    <li style="text-align: left;">Dökümlü ve salaş bir görüntü oluşturmaktadır.</li>
+    <li style="text-align: left;">Genellikle buruşmayan ve ütü gerektirmeyen bir yapıya sahiptir.</li>
+    <li style="text-align: left;">Esnek bir yapıya sahiptir.</li>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+
 </body>
 </html>
