--- a/TB Tekstil/poplin.html
+++ b/TB Tekstil/poplin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Poplin Kumaş</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -15,10 +15,31 @@
     
         <a href="hakkimizda.html">Hakkımızda</a> 
         <a href="kumas.html">Kumaş Türlerimiz</a>
-        <a href="konfeksiyon.html">Konfeksiyon</a>
+        <a href="konfeksiyon.html">Anket</a>
         <a href="ürünlerimiz.html">Ürünlerimiz</a>
         <a href="iletisim.html">İletişim</a>
     </nav>
+    <img src="images/poplin.jfif" alt="poplin"
+    width="672" height="400">
+    <img src="images/poplin2.jpeg" alt="poplin2"
+    width="672" height="400">
+    <h1 style="color: red;">Poplin Kumaş Nedir ?</h1>
+    <br />
+    <p style="text-align: left;">İpeksi bir görünüme sahip olan poplin kumaş, oldukça yumuşak ve rahat bir yapıya sahiptir. Aynı zamanda ince ve sık dokunmuş bir kumaş olarak bilinir. Eski dönemlerden günümüze kadar ipek iplik üzerinden üretimi gerçekleşir. İpeksi ve yumuşak bir doku sunmasıyla günümüze sıkça değerlendirilmektedir.Yumuşak dokusu eşliğinde poplin kumaş en çok bilinen kumaşlar arasında yer almaktadır. İnce iplikler halinde sık dokuma üzerinden elde edilir. İlk keşfedildiği zamanlarda ipek iplik üzerinden üretimi gerçekleştirilse dahi, günümüzde merserize ince penye pamuklu iplikleri eşliğinde üretimleri sağlanmaktadır. Özellikle nevresimle çarşaf üretimi noktasında günümüzde büyük öneme sahip olduğunu söylemek mümkün.</p>
+    <br />
+    <h1 style="color: red;">Poplin Kumaşın Özellikleri Nelerdir ?</h1>
+    <br />
+<li style="text-align: left;"> İnce iplik ve sık dokuma ile yumuşak bir özelliğe sahiptir</li>
+<li style="text-align: left;">0 pamuklu dokuma üzerinden ele alınır.</li>
+<li style="text-align: left;">Çarşaf bebek örtüleri ve nevresim gibi pek çok alanda kullanılmaktadır.</li>
+<li style="text-align: left;">Akla gelebilecek birçok farklı kıyafet için kullanılabilmektedir.</li>
+<li style="text-align: left;">İnce olmasına rağmen sıcak tutan bir özelliği bulunmaktadır.</li>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 
 </body>
 </html>
