--- a/TB Tekstil/sifon.html
+++ b/TB Tekstil/sifon.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Şifon Kumaş</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -15,10 +15,37 @@
     
         <a href="hakkimizda.html">Hakkımızda</a> 
         <a href="kumas.html">Kumaş Türlerimiz</a>
-        <a href="konfeksiyon.html">Konfeksiyon</a>
+        <a href="konfeksiyon.html">Anket</a>
         <a href="ürünlerimiz.html">Ürünlerimiz</a>
         <a href="iletisim.html">İletişim</a>
     </nav>
-    
+    <img src="images/sifon.jfif" alt="sifon1"
+    width="672" height="300">
+    <img src="images/sifon2.jpg" alt="sifon2"
+    width="672" height="300">
+    <h1 style="color: red;">Şifon Kumaş Nedir ?</h1>
+    <br />
+    <p style="text-align: left;">Şifon kumaş genel olarak ipek, suni ipek, polyester ve sentetik elyaflardan dokunarak oluşturuluyor. Tek katlı olarak dokunan şifon kumaşlar genellikle abiye kıyafetlerin dikiminde kullanılıyor.Şifon kumaşın tarihi 1700'lü yıllara dayanmaktadır. Günümüzde şık ve zarif olmak adına kullanılan şifon kumaşlar yumuşak ve ipeksi dokulu olarak ön plana çıkıyor. Işık geçirebilir görünümde olan şifon kumaşlar oldukça ince yapılıdır. Polyester ve krepten üretilen şifon kumaş dayanıklı olduğu için de tercih edilir. Efil efil bir görüntüsü olan şifon genellikle salaş elbiselerin üretiminde de kullanılır. Doğal ipekten üretilen şifon kumaşların kalitesi çok daha yüksek olmaktadır.İnce ve hafif bir yapısı olan şifon kumaş özellikle abiye kıyafetlerin tasarımında kullanılmaktadır. Tek katlı olarak dokunan şifon kumaş ışık geçirebilir olduğu için iç de gösterir. Bu nedenle şifon kumaş ile hazırlanan kıyafetin altına mutlaka astar dikilmelidir. Polyesterden üretilen şifon kumaş dayanıklı ve uygun fiyatlı olduğu için çok tercih edilmektedir. İpek şifon kumaşlar ise hem pahalı hem de oldukça kalitelidir. Şifon kumaşın birbirinden farklı çeşitleri de bulunmaktadır.</p>
+<br />
+<h1 style="color: red;">Şifon Kumaşın Özellikleri Nelerdir ?</h1>
+<br />
+<li style="text-align: left;">İpekten, polyesterden ve sentetikten dokunabilir..</li>
+<li style="text-align: left;">İpeksi bir yapıya sahiptir.</li>
+<li style="text-align: left;">Kullanımı oldukça kolaydır.</li>
+<li style="text-align: left;">İpekten üretilen şifon kumaşın maaliyeti daha yüksektir.</li>
+<li style="text-align: left;">Çok hafif ve esnek bir yapıya sahiptir.</li>
+<li style="text-align: left;">Terleten bir yapıya sahiptir.</li>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+
+
+
+
+
 </body>
 </html>
