--- a/TB Tekstil/tebrikler2.html
+++ b/TB Tekstil/tebrikler2.html
@@ -21,6 +21,6 @@
         <a href="iletisim.html">İletişim</a>
     </nav>
     <P style="color: darkred;">TEBRİKLER</P>
-    <P style="color: darkred;">EN KISA SÜREDE SİZE GERİ DÖNÜŞ SAĞLANACAKTIR.</P>
+    <P style="color: darkred;">ANKETİMİZE KATILDIĞINIZ İÇİN TEŞEKKÜR EDERİZ:)</P>
 </body>
 </html>
