--- a/TB Tekstil/viskon.html
+++ b/TB Tekstil/viskon.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Viskon Kumaş</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -15,10 +15,37 @@
     
         <a href="hakkimizda.html">Hakkımızda</a> 
         <a href="kumas.html">Kumaş Türlerimiz</a>
-        <a href="konfeksiyon.html">Konfeksiyon</a>
+        <a href="konfeksiyon.html">Anket</a>
         <a href="ürünlerimiz.html">Ürünlerimiz</a>
         <a href="iletisim.html">İletişim</a>
     </nav>
+    <img src="images/viskon.jfif" alt="viskon"
+    width="672" height="400">
+    <img src="images/viskon2.jpg" alt="viskon2"
+    width="672" height="400">
+    <h1 style="color: red;">Viskon Kumaş Nedir ?</h1>
+    <br />
+    <p style="text-align: left;">Viskon kumaş, tekstil ürünü olarak, niteliği oldukça yüksek olan bir üründür. Nem emiciliği özelliği fazla olan viskon kumaşın yapısında bulunan selüloz, pamuk ile arasındaki benzerliğin ortaya çıkma nedenidir.</p>
+    <br />
+    <p style="text-align: left;">Viskon kumaş için, kayın ağacından imal edilen bir ham madde olduğu söylenebilir. Yapısında selüloz bulunmaktadır ve imalatın gerçekleşme aşamasında, selüloz üzerinde kimyasal bir farklılık olmaz. İmalat bitiminde filament şeklini alır ve tekrar selüloz olarak kalır. Viskon kumaşın pamuk ile benzerliği bu özellikleri sebebi ile gerçekleşmektedir.</p>
+    <br />
+    <h1 style="color: red;">Viskon Kumaşın Özellikleri Nelerdir ?</h1>
+    <br />
+    <li style="text-align: left;">Viskon kumaş terletme yapmaz ve havan alan bir yapıdadır.</li>
+    <li style="text-align: left;">Renkleri canlı olarak tutar.</li>
+    <li style="text-align: left;">Baskı için oldukça elverişlidir.</li>
+    <li style="text-align: left;">Hem rahat, hem zarif bir kumaş türüdür.</li>
+    <li style="text-align: left;">Yüksek seviyede nem emici özelliği bulunur.</li>
+    <li style="text-align: left;">Şişme özeliği yüksek seviyededir, bu sebeple 0’ye dek çıkabilen bir su emiciliğine sahiptir.</li>
+    <li style="text-align: left;">Pamuğa nazaran iki kat fazla esneme özelliği vardır.</li>
+    <li style="text-align: left;"> Krep kumaş içerisinde de oldukça sık kullanılmaktadır.</li>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
     
 </body>
 </html>
