--- a/TB Tekstil/bershka.html
+++ b/TB Tekstil/bershka.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEBRİKLER</title>
+    <title>Bershka</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
- 
 <body>
     <nav class="menu-bar">
         <a href="index.html"><img src="images/logo.png.png" alt="Ana Sayfa"
         width="115"
          height="45"></a>    
     
-        <a href="hakkimizda.html">Hakkımızda</a>    
+        <a href="hakkimizda.html">Hakkımızda</a> 
         <a href="kumas.html">Kumaş Türlerimiz</a>
         <a href="konfeksiyon.html">Anket</a>
         <a href="ürünlerimiz.html">Ürünlerimiz</a>
         <a href="iletisim.html">İletişim</a>
     </nav>
-    <P style="color: darkred;">TEBRİKLER</P>
-    <P style="color: darkred;">EN KISA SÜREDE SİZE GERİ DÖNÜŞ SAĞLANACAKTIR.</P>
+    <img src="images/bershka.jpeg" alt="bershka"
+    width="672" height="600">
+    <img src="images/bershka2.jpeg" alt="bershka2"
+    width="672" height="600">
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+
+    
 </body>
 </html>
