--- a/TB Tekstil/ürünlerimiz.html
+++ b/TB Tekstil/ürünlerimiz.html
@@ -24,22 +24,23 @@
 
    
     
-       
-    <a href="adidas.html" target="_blank" style="color: black;">-Adidas</a>  <br />
+       <ol></ol>
+       <li style="text-align: left;" ><a href="adidas.html" target="_blank" style="color: black;">Adidas</a> </li> <br />
     <br />
-    <a href="mavi.html" target="_blank" style="color:blue;">-Mavi</a> <br />
+    <li style="text-align: left;" ><a href="mavi.html" target="_blank" style="color:blue;">Mavi</a></li> <br />
     <br />
-    <a href="pullbear.html" target="_blank" style="color: purple;">-Pull&Bear</a> <br />
+    <li style="text-align: left;" > <a href="pullbear.html" target="_blank" style="color: purple;">Pull&Bear</a></li> <br />
     <br />
-    <a href="puma.html" target="_blank" style="color: brown;">-Puma</a> <br />
+    <li style="text-align: left;" ><a href="puma.html" target="_blank" style="color: brown;">Puma</a></li> <br />
     <br />
-    <a href="hm.html" target="_blank" style="color: black;">-H&M</a> <br />
+    <li style="text-align: left;" > <a href="hm.html" target="_blank" style="color: black;">H&M</a></li> <br />
     <br />
-    <a href="lcw.html" target="_blank" style="color: deeppink;">-Lc Waikiki</a> <br />
+    <li style="text-align: left;" ><a href="lcw.html" target="_blank" style="color: deeppink;">Lc Waikiki</a></li> <br />
     <br />
-    <a href="defacto.html" target="_blank" style="color: darkred;">-Defacto</a> <br />
+    <li style="text-align: left;" ><a href="defacto.html" target="_blank" style="color: darkred;">Defacto</a></li> <br />
     <br />
-    <a href="zara.html" target="_blank" style="color: orangered;">-Zara</a> <br />
+    <li style="text-align: left;" ><a href="zara.html" target="_blank" style="color: orangered;">Zara</a></li> <br />
+
     <br />
     <br />
     <br />
